revise wording based on feedback

--- a/intoduction.html
+++ b/intoduction.html
@@ -64,7 +64,7 @@ padding: 1rem;
 <h2>Ziele und Inhalte des Projekts</h2>
 <ul>
 <li><strong>Daten sichtbar machen</strong> – Unter <em>Ihre Gebäude heute</em> finden Sie die öffentlich verfügbaren Informationen zu Ihrem Gebäude, einschließlich Gebäudetyp, Baujahr, Heizsystem und installierter PV-Leistung.</li>
-<li><strong>Erfahrungen sammeln</strong> – Unter <a href="https://colouring-duebendorf.github.io/survey.html" target="_blank">Teilen Sie Ihre Angaben</a> können Sie die Daten prüfen, korrigieren und ergänzen. Sie können auch weitere Informationen zu Ihrem Gebäude angeben und zukünftige Optionen markieren, z. B. geplante Sanierungen oder den Einsatz erneuerbarer Technologien.</li>
+<li><strong>Erfahrungen sammeln</strong> – Unter <a href="https://colouring-duebendorf.github.io/survey.html" target="_blank">Teilen Sie Ihre Angaben</a> können Sie die Daten prüfen, korrigieren und ergänzen. Sie können auch weitere Informationen zu Ihrem Gebäude angeben und Ihre Präferenzen und Pläne für künftige energetische Projekte angeben, z. B. geplante Sanierungen oder den Einsatz erneuerbarer Technologien.</li>
 <li><strong>Beteiligung im Quartier</strong> – Unter <em>Stimmen aus dem Quartier</em> kann man einen Überblick über die Beteiligung der Gemeinschaft erhalten und sehen, welche Beiträge von den Bewohnerinnen und Bewohnern eingegangen sind.</li>
 <li><strong>Zukunft gestalten</strong> – In <em>Zukünftige Szenarien & Ergebnisse</em> zeigen wir, wie sich das Quartier mit mehr erneuerbarer Energie, Sanierungen oder neuen Technologien entwickeln könnte.</li>
 </ul>
