Update intoduction.html correct job titles

--- a/intoduction.html
+++ b/intoduction.html
@@ -105,8 +105,8 @@ Sie können an der Verlosung von 3 Gutscheinen für Energieberatungsdienstleistu
 <p>Bei Fragen wenden Sie sich gerne an:<br>
 <ul>
   <li><a href="https://www.duebendorf.ch/personenregister/400603" target="_blank"><b>Milena Krieger</b></a> (Projektleiterin, Stadt Dübendorf) – <a href="mailto:milena.krieger@duebendorf.ch">milena.krieger@duebendorf.ch</a> – 044 801 6027<br>
-  <li><a href="https://www.empa.ch/web/mag" target="_blank"><b>Georgios Mavromatidis</b></a> (Laborleiter, Empa) – <a href="mailto:georgios.mavromatidis@empa.ch">georgios.mavromatidis@empa.ch</a> – 058 765 4299<br>
-  <li><a href="https://www.empa.ch/web/kobi" target="_blank"><b>Binod Koirala</b></a> (Gruppenleiter Bauwerke & Städte, Empa) – <a href="mailto:binod.koirala@empa.ch">binod.koirala@empa.ch</a> – 058 765 4683</p>
+  <li><a href="https://www.empa.ch/web/mag" target="_blank"><b>Georgios Mavromatidis</b></a> (Leiter des Labors für Urbane Energiesysteme, Empa) – <a href="mailto:georgios.mavromatidis@empa.ch">georgios.mavromatidis@empa.ch</a> – 058 765 4299<br>
+  <li><a href="https://www.empa.ch/web/kobi" target="_blank"><b>Binod Koirala</b></a> (Gruppenleiter Gebäude and Städte, Empa) – <a href="mailto:binod.koirala@empa.ch">binod.koirala@empa.ch</a> – 058 765 4683</p>
 </ul>
 
 <p>Wir danken allen Beteiligten für die Zusammenarbeit und Ihr Engagement!</p>
