Update intoduction.html data policy with email address

--- a/intoduction.html
+++ b/intoduction.html
@@ -82,9 +82,8 @@ padding: 1rem;
 
 
 <h2>Datenschutz</h2>
-<p>Ihre Angaben werden vertraulich behandelt und ausschliesslich für die Energieplanung im Quartier Gfenn verwendet.<br>
-Die Teilnahme ist freiwillig. Es werden keine Namen erfasst, nur die Adresse zur räumlichen Einordnung.<br>
-Am Ende der Umfrage können Sie optional Ihre E-Mail-Adresse angeben. Diese wird nicht mit den Antworten verknüpft.<br>
+<p>Ihre Angaben werden vertraulich behandelt und ausschliesslich für die Energieplanung im Quartier Gfenn verwendet. Die Teilnahme ist freiwillig. Es werden keine Namen erfasst, nur die Adresse zur räumlichen Einordnung.<br>
+Am Ende der Umfrage können Sie optional Ihre E-Mail-Adresse angeben, um an der Verlosung eines Gutscheins vom Glattwerk teilzunehmen und Erinnerungen zu Plattform-Updates zu erhalten. Die E-Mail-Adresse wird getrennt von Ihren Umfrageantworten gespeichert und nicht mit diesen verknüpft.<br>
 Ihre Daten werden anonym bzw. pseudonymisiert verarbeitet und nicht an Dritte weitergegeben.<br></p>
 
 
