Update intoduction.html refine the text, espeically for data protection

--- a/intoduction.html
+++ b/intoduction.html
@@ -52,6 +52,15 @@ ul, ol {
 .team h2 {
   margin-top: 0;
 }
+.privacy {
+  background: #f0f4f8;
+  padding: 1.5rem;
+  margin-top: 2rem;
+  border-radius: 8px;
+}
+.privacy h2 {
+  margin-top: 0;
+}
 footer {
   text-align: center;
   font-size: 0.9rem;
@@ -70,11 +79,13 @@ footer {
 </style>
 
 <main>
-<p>Herzlich willkommen auf der Plattform des Projekts <b>Colouring Dübendorf</b>. Die Energiewende gelingt nur gemeinsam. Auf dieser Plattform erhalten Sie Einblick in die aktuellen Energie- und Gebäudedaten des Quartiers Gfenn – und die Möglichkeit, Ihr Wissen und Ihre Erfahrungen einzubringen.</p>
+<p>Herzlich willkommen auf der Plattform des Projekts <strong>Colouring Dübendorf</strong>!<br>
+Die Energiewende gelingt nur gemeinsam – und hier sind Sie ein wichtiger Teil davon. Diese Plattform bietet Ihnen Einblick in die aktuellen Energie- und Gebäudedaten des Quartiers Gfenn und lädt Sie ein, Ihr Wissen und Ihre Erfahrungen aktiv einzubringen.
+</p>
 
 <h2>Ziele und Inhalte des Projekts</h2>
 <ul>
-<li><strong>Daten sichtbar machen</strong> – Unter <em>Ihre Gebäude heute</em> finden Sie die öffentlich verfügbaren Informationen zu Ihrem Gebäude, einschließlich Gebäudetyp, Baujahr, Heizsystem und installierter PV-Leistung.</li>
+<li><strong>Daten sichtbar machen</strong> – Unter <em>Ihre Gebäude heute</em> finden Sie die öffentlich verfügbaren Informationen zu Ihrem Gebäude, einschliesslich Gebäudetyp, Baujahr, Heizsystem und installierter PV-Leistung.</li>
 <li><strong>Erfahrungen sammeln</strong> – Unter <a href="https://colouring-duebendorf.github.io/survey.html" target="_blank">Teilen Sie Ihre Angaben</a> können Sie die Daten prüfen, korrigieren und ergänzen. Sie können auch weitere Informationen zu Ihrem Gebäude angeben und Ihre Präferenzen und Pläne für künftige energetische Projekte angeben, z. B. geplante Sanierungen oder den Einsatz erneuerbarer Technologien.</li>
 <li><strong>Beteiligung im Quartier</strong> – Unter <em>Stimmen aus dem Quartier</em> kann man einen Überblick über die Beteiligung der Gemeinschaft erhalten und sehen, welche Beiträge von den Bewohnerinnen und Bewohnern eingegangen sind.</li>
 <li><strong>Zukunft gestalten</strong> – In <em>Zukünftige Szenarien & Ergebnisse</em> zeigen wir, wie sich das Quartier mit mehr erneuerbarer Energie, Sanierungen oder neuen Technologien entwickeln könnte.</li>
@@ -101,11 +112,23 @@ footer {
   <p>Mit Ihrer Teilnahme unterstützen Sie nicht nur die Energieplanung – Sie nehmen auch automatisch an der Verlosung von 3 Gutscheinen für Energieberatungsdienstleistungen der Glattwerk AG teil.</p>
 </div>
 
+
+<div class="privacy">
 <h2>Datenschutz</h2>
-<p>Ihre Angaben werden vertraulich behandelt und ausschliesslich für die Energieplanung im Quartier Gfenn verwendet. Die Teilnahme ist freiwillig. Es werden keine Namen erfasst, nur die Adresse zur räumlichen Einordnung.<br>
-Am Ende der Umfrage können Sie optional Ihre E-Mail-Adresse angeben, um an der Verlosung eines Gutscheins vom Glattwerk teilzunehmen und Erinnerungen zu Plattform-Updates zu erhalten. Ihre E-Mail-Adresse wird ausschliesslich für die Verlosung und Benachrichtigungen zu Plattform-Updates verwendet und nicht für andere Zwecke eingesetzt.<br>
-Ihre Daten werden anonym bzw. pseudonymisiert verarbeitet und nicht an Dritte weitergegeben.<br></p>
-<p>Weitere Informationen zum Datenschutz finden Sie in unserer <a href="https://colouring-duebendorf.github.io/Datenschutzerklaerung_Colouring_Duebendorf.pdf" target="_blank">Datenschutzerklärung</a>.</p>
+<p>Ihre Angaben werden vertraulich behandelt und ausschliesslich für die Energieplanung im Quartier Gfenn verwendet. Die Teilnahme ist freiwillig.</p>
+
+<p><strong>Welche Daten werden erfasst?</strong><br>
+Es werden keine persönlichen Angaben wie Name oder Telefonnummer erfasst. Die Gebäudeadresse wird ausschliesslich für die räumliche Einordnung benötigt.</p>
+
+<p><strong>Optionale E-Mail-Adresse:</strong><br>
+Am Ende der Umfrage können Sie freiwillig Ihre E-Mail-Adresse angeben, um an der Verlosung eines Gutscheins vom Glattwerk teilzunehmen und Erinnerungen zu Plattform-Updates zu erhalten. Ihre E-Mail-Adresse wird ausschliesslich für diese Zwecke verwendet.</p>
+
+<p><strong>Datenverarbeitung:</strong><br>
+Ihre Daten werden pseudonymisiert verarbeitet und nicht an Dritte weitergegeben.</p>
+
+<p>Weitere Informationen finden Sie in unserer <a href="https://colouring-duebendorf.github.io/Datenschutzerklaerung_Colouring_Duebendorf.pdf" target="_blank">Datenschutzerklärung</a>.</p>
+</div>
+
 
 <div class="team">
 <h2>Projektteam & Kontakt</h2>
@@ -125,6 +148,8 @@ Ihre Daten werden anonym bzw. pseudonymisiert verarbeitet und nicht an Dritte we
 
 <p>Wir danken allen Beteiligten für die Zusammenarbeit und Ihr Engagement!</p>
 </div>
+
+
 
 <div class="image-row">
   <img src="Empa.jpg" alt="Empa">
